package eu.telecomnancy.codingweek.codenames.model;

import java.util.List;

public class SpyTeam extends Team{
    
    public SpyTeam(List<Player> playersList, Session session) {
        super(null, playersList, session);
    }

    public void guess(Card card) {
        // A_REVOIR
    }

}
